--- a/resources/web/userdashboard_overview.html
+++ b/resources/web/userdashboard_overview.html
@@ -64,7 +64,6 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
               <ul class="nav navbar-nav">
-               <li><a class="navbar-brand" href="#">BitPieces</a></li>
                <li><a href="/carousel">Home</a></li>
                <li><a href="#discover">Discover</a></li>
                <li><a href="/creators">Creators</a></li>
@@ -150,10 +149,11 @@
      </div><!-- /.container-fluid -->
    </nav>
 
+   <!-- The full page with teh sidebar -->
    <div class="container-fluid">
      <div class="row">
 
-
+      <!-- The sidebar -->
       <div class="col-md-2 sidebar">
 
         <div class="mini-submenu">
@@ -163,13 +163,13 @@
         </div>
         <div class="list-group">
           <span href="#" class="list-group-item active">
-            Submenu
+            <a href="userdashboard_overview.html"><i class="fa fa-dashboard"></i> Overview</a>
             <span class="pull-right" id="slide-submenu">
               <i class="fa fa-times"></i>
             </span>
           </span>
 
-          <a class="list-group-item" href="userdashboard_overview.html"><i class="fa fa-dashboard"></i> Overview</a>
+          
           <a class="list-group-item" href="userdashboard_funds.html"><i class="fa fa-bar-chart-o"></i> Funds</a>
           <a class="list-group-item" href="userdashboard_pieces.html"><i class="fa fa-table"></i> Pieces</a>
           <a class="list-group-item" href="userdashboard_prices.html"><i class="fa fa-edit"></i> Prices</a>
