--- a/resources/web/userdashboard_overview.html
+++ b/resources/web/userdashboard_overview.html
@@ -68,8 +68,8 @@
                <li><a href="#discover">Discover</a></li>
                <li><a href="/creators">Creators</a></li>
                <li class="active"><a href="/userdashboard_overview" id="dashboardhref" class="hide">Dashboard</a></li>
-               <li><a href="#login" id="loginhref" data-toggle="modal" data-target="#userloginModal">Login/Register</a></li>
-               <li><a href="#logout" id="logouthref" class="hide">Log Out</a></li>
+               <!-- <li><a href="#login" id="loginhref" data-toggle="modal" data-target="#userloginModal">Login/Register</a></li>
+               <li><a href="#logout" class="hide">Log Out</a></li> -->
                <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
                 <ul class="dropdown-menu">
@@ -135,11 +135,9 @@
 
 
              <ul class="dropdown-menu">
-             <li><a href="#"><i class="fa fa-user"></i> Profile</a></li>
-             <li><a href="#"><i class="fa fa-envelope"></i> Inbox <span class="badge">7</span></a></li>
              <li><a href="#"><i class="fa fa-gear"></i> Settings</a></li>
              <li class="divider"></li>
-             <li><a href="#"><i class="fa fa-power-off"></i> Log Out</a></li>
+             <li><a id="logouthref" href="#logout"><i class="fa fa-power-off"></i> Log Out</a></li>
 
              </ul>
              </script>
