--- a/resources/web/creatordashboardcustomize.html
+++ b/resources/web/creatordashboardcustomize.html
@@ -28,6 +28,9 @@
   <!-- This main css -->
   <link href="userdashboard.css" rel="stylesheet">
 
+  <!-- Summernote -->
+  <link href="summernote/dist/summernote.css" rel="stylesheet"/>
+
   <!-- Just for debugging purposes. Don't actually copy this line! -->
   <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
 
@@ -124,20 +127,25 @@
         <h1 class="page-header">Dashboard</h1>
 
 
-        <form id="customizeForm" class="form-horizontal" role="form">
-          <div class="form-group">
-            <label>Text area</label>
-            <textarea id="main_body" name="main_body" class="form-control" rows="3"></textarea>
-          </div>
+        <!-- <form id="customizeForm" class="form-horizontal" role="form"> -->
+        <!-- <div class="form-group"> -->
+        <!-- <label>Text area</label> -->
+        <!-- textarea id="main_body" name="main_body" class="form-control" rows="3"></textarea>--> 
+         <!--<script id="main_body_template" type="x-tmpl-mustache"> </script>--> 
+        <div id="main_body"></div>
+        
+          
 
-          <div class="form-group">
-            <div class="col-sm-offset-2 col-sm-10">
-            <button id="saveBtn" type="submit" class="btn btn-default">Save</button>
-            </div>
-          </div>
-        </form>
-
+        <!-- </div> -->
+ 
+        <!-- <div class="form-group"> -->
+        <div class="col-sm-offset-2 col-sm-10">
+          <button id="saveBtn" type="submit" class="btn btn-default">Save</button>
+        </div>
       </div>
+      <!-- </form> -->
+
+    </div>
 
       <!-- Bootstrap core JavaScript
       ================================================== -->
@@ -149,13 +157,16 @@
       <script src="toastr/toastr.js"></script>
       <script src="mustache/mustache.js"></script>
       <script src="holder/holder.js"></script>
+      <script src="typeahead.js/typeahead.bundle.js"></script>
+      <script src="summernote/dist/summernote.min.js"></script>
+
 
 
       <!-- my scripts -->
       <script src="tools.js"></script>
       <script src="userdashboard.js"></script>
       <script src="login.js"></script>
-       <script src="creatordashboardcustomize.js"></script>
+      <script src="creatordashboardcustomize.js"></script>
 
     </body>
     </html>
