--- a/resources/web/creators_pages/Leonardo_Davinci.html
+++ b/resources/web/creators_pages/Leonardo_Davinci.html
@@ -92,7 +92,7 @@
 
  <div class="starter-template">
  <h1>Creator Leonardo_Davinci Page </h1>
- <p class="lead">YURP</p>
+ <p class="lead">This is a strange test<div><br></div><div><br></div><div><span style="font-weight: bold;">dfsadf</span></div><div><span style="font-weight: bold;"><br></span></div><h2><span style="font-weight: bold;">fsdfdsf</span></h2></p>
  </div>
 <div class="row">
 	<div class="col-md-12">
