--- a/resources/web/userdashboard_prices.html
+++ b/resources/web/userdashboard_prices.html
@@ -47,98 +47,97 @@
       <!-- Start using sb admin stuff -->
       <div id="wrapper">
 
-       <!-- Sidebar -->
-       <div class="col-sm-3 col-md-2 sidebar">
-        <ul class="nav nav-sidebar">
-          <li class="active"><a href="userdashboard_overview.html"><i class="fa fa-dashboard"></i> Overview</a></li>
-          <li><a href="userdashboard_funds.html"><i class="fa fa-bar-chart-o"></i> Funds</a></li>
-          <li><a href="userdashboard_pieces.html"><i class="fa fa-table"></i> Pieces</a></li>
-          <li><a href="userdashboard_prices.html"><i class="fa fa-edit"></i> Prices</a></li>
-        </ul>
+       <!-- plug into here -->
+        <nav class="navbar navbar-default" role="navigation">
+          <div class="container-fluid">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+              <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+              </button>
+              <a class="navbar-brand" href="#">BitPieces</a>
+            </div>
 
-      </div>
-
-      <!-- Top Bar -->
-      <div class="navbar navbar-default navbar-fixed-top" role="navigation">
-
-        <ul class="nav navbar-nav navbar-user navbar-left">
-          <li><a class="navbar-brand" href="#">BitPieces</a></li>
-          <li><a href="/carousel">Home</a></li>
-          <li><a href="#discover">Discover</a></li>
-          <li><a href="/creators">Creators</a></li>
-          <li class="active"><a href="/userdashboard_overview" id="dashboardhref" class="hide">Dashboard</a></li>
-          <li><a href="#login" id="loginhref" data-toggle="modal" data-target="#userloginModal">Login/Register</a></li>
-          <li><a href="#logout" id="logouthref" class="hide">Log Out</a></li>
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
-            <ul class="dropdown-menu">
-              <li><a href="#">Action</a></li>
-              <li><a href="#">Another action</a></li>
-              <li><a href="#">Something else here</a></li>
-              <li class="divider"></li>
-              <li class="dropdown-header">Nav header</li>
-              <li><a href="#">Separated link</a></li>
-              <li><a href="#">One more separated link</a></li>
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+              <ul class="nav navbar-nav">
+               <li><a href="/carousel">Home</a></li>
+               <li><a href="#discover">Discover</a></li>
+               <li><a href="/creators">Creators</a></li>
+               <li class="active"><a href="/userdashboard_overview" id="dashboardhref" class="hide">Dashboard</a></li>
+               <!-- <li><a href="#login" id="loginhref" data-toggle="modal" data-target="#userloginModal">Login/Register</a></li>
+               <li><a href="#logout" class="hide">Log Out</a></li> -->
+               <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
+                <ul class="dropdown-menu">
+                  <li><a href="#">Action</a></li>
+                  <li><a href="#">Another action</a></li>
+                  <li><a href="#">Something else here</a></li>
+                  <li class="divider"></li>
+                  <li class="dropdown-header">Nav header</li>
+                  <li><a href="#">Separated link</a></li>
+                  <li><a href="#">One more separated link</a></li>
+                </ul>
+              </li>
             </ul>
+            <form id="creator_search" class="navbar-form navbar-left" role="search">
+              <div class="form-group">
+               <input name="search_input" type="text" class="form-control typeahead" placeholder="Search for Creator...">
+             </div>
+             <button type="submit" class="btn btn-default"><i class="fa fa-search"></i></button>
+           </form>
+
+
+           <ul class="nav navbar-nav navbar-right">
+ 
+
+
+            <li id="userDropdown" class="dropdown user-dropdown">
+
+             <script id="usernameTemplate" type="x-tmpl-mustache">  
+               <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> {{.}} <b class="caret"></b></a>
+
+
+               <ul class="dropdown-menu">
+                 <li><a href="#"><i class="fa fa-gear"></i> Settings</a></li>
+                 <li class="divider"></li>
+                 <li><a id="logouthref" href="#logout"><i class="fa fa-power-off"></i> Log Out</a></li>
+
+               </ul>
+             </script>
+           </li>
+         </ul>
+       </div><!-- /.navbar-collapse -->
+     </div><!-- /.container-fluid -->
+   </nav>
+
+   <!-- The full page with teh sidebar -->
+   <div class="container-fluid">
+     <div class="row">
+
+      <!-- The sidebar -->
+      <div id="side_col" class="col-md-2 sidebar">
+
+        <div class="mini-submenu">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </div>
+        <div class="list-group">
+          <li class="list-group-item">
+            <a href="userdashboard_overview.html"><i class="fa fa-dashboard"></i> Overview</a>
+            <span class="badge" id="slide-submenu"><i class="fa fa-times"></i></span>
           </li>
-        </ul>
 
-        <ul class="nav navbar-nav navbar-right navbar-user">
-          <li class="dropdown messages-dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-envelope"></i> Messages <span class="badge">7</span> <b class="caret"></b></a>
-            <ul class="dropdown-menu">
-              <li class="dropdown-header">7 New Messages</li>
-              <li class="message-preview">
-                <a href="#">
-                  <span class="avatar"><img src="http://placehold.it/50x50"></span>
-                  <span class="name">John Smith:</span>
-                  <span class="message">Hey there, I wanted to ask you something...</span>
-                  <span class="time"><i class="fa fa-clock-o"></i> 4:34 PM</span>
-                </a>
-              </li>
-              <li class="divider"></li>
-              <li class="message-preview">
-                <a href="#">
-                  <span class="avatar"><img src="http://placehold.it/50x50"></span>
-                  <span class="name">John Smith:</span>
-                  <span class="message">Hey there, I wanted to ask you something...</span>
-                  <span class="time"><i class="fa fa-clock-o"></i> 4:34 PM</span>
-                </a>
-              </li>
-              <li class="divider"></li>
-              <li class="message-preview">
-                <a href="#">
-                  <span class="avatar"><img src="http://placehold.it/50x50"></span>
-                  <span class="name">John Smith:</span>
-                  <span class="message">Hey there, I wanted to ask you something...</span>
-                  <span class="time"><i class="fa fa-clock-o"></i> 4:34 PM</span>
-                </a>
-              </li>
-              <li class="divider"></li>
-              <li><a href="#">View Inbox <span class="badge">7</span></a></li>
-            </ul>
-          </li>
-
-
-          <li id="userDropdown" class="dropdown user-dropdown">
-
-           <script id="usernameTemplate" type="x-tmpl-mustache">  
-           <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> {{.}} <b class="caret"></b></a>
-
-
-           <ul class="dropdown-menu">
-           <li><a href="#"><i class="fa fa-user"></i> Profile</a></li>
-           <li><a href="#"><i class="fa fa-envelope"></i> Inbox <span class="badge">7</span></a></li>
-           <li><a href="#"><i class="fa fa-gear"></i> Settings</a></li>
-           <li class="divider"></li>
-           <li><a href="#"><i class="fa fa-power-off"></i> Log Out</a></li>
-
-           </ul>
-           </script>
-         </li>
-
-       </ul>
-     </div><!-- /.navbar-collapse -->
+          <a class="list-group-item" href="userdashboard_funds.html"><i class="fa fa-bar-chart-o"></i> Funds</a>
+          <a class="list-group-item" href="userdashboard_pieces.html"><i class="fa fa-table"></i> Pieces</a>
+          <a class="list-group-item active" href="userdashboard_prices.html"><i class="fa fa-edit"></i> Prices</a>
+        </div>
+      </div>        
+    </div>
 
      <!-- The Page -->
      <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
